# papernest-v1

./: .env.example  .gitignore  Brand.json  DEPLOYMENT_GUIDE.md  Design.md  FLOW_AND_SCREENS.md  LICENSE  PLANNING.md  README.md  Style.json  alembic.ini  paperlens  paperlens.bat  paperlens_cli.py  pyproject.toml  test_pagination_fix.ps1
.github/workflows/: ci.yml
.kiro/steering/: product.md  structure.md  tech.md
alembic/: env.py
alembic/versions/: add_account_lockout_fields.py  add_composite_indexes.py  add_user_id_to_saved_and_alerts.py  fc7b40e75078_initial_migration_with_users_papers_.py
app/: config.py  main.py
app/api/: routes_alert.py  routes_auth.py  routes_export.py  routes_saved.py  routes_search.py
app/core/: auth.py  http.py  logging.py  rate_limit.py  (+1 more)
connectors/: arxiv.py  base.py  core.py  crossref.py  doaj.py  europepmc.py  openalex.py  pubmed.py  registry.py  semantic_scholar.py
data/: journal_models.py
docs/: JOURNAL_QUALITY_SETUP.md
frontend/: index.html  package-lock.json  package.json  streamlit_app.py  tailwind.config.js  vite.config.optimized.ts  vite.config.ts
models/: __init__.py  paper.py  saved_paper.py  search_alert.py  user.py
schemas/: auth.py  paper.py  saved_paper.py  search.py  search_alert.py
services/: ai_service.py  altmetrics_service.py  auth_service.py  cache_service.py  dedup_service.py  field_citations.py  journal_quality_service.py  query_parser.py  ranking_service.py  redis_cache.py  search_analytics.py  search_service.py  spell_checker.py
tests/: conftest.py  test_arxiv_connector.py  test_auth_integration.py  test_core_connector.py  test_crossref_connector.py  test_dedup.py  test_doaj_connector.py  test_europepmc_connector.py  test_export.py  test_field_citations.py  test_journal_quality.py  test_normalize.py  test_openalex_connector.py  test_pubmed_connector.py  test_query_parser.py  test_ranking.py  test_registry.py  test_search_analytics.py  test_search_integration.py  test_search_route.py  test_security.py  test_semantic_scholar_connector.py  test_spell_checker.py
utils/: export.py  normalize.py  security.py
workers/: alert_worker.py
(+52 files in other folders)
